# zish

./: Cargo.toml  PKGBUILD
src/: main.rs
src/config/: mod.rs
src/env/: mod.rs
src/executor/: job_control.rs  mod.rs  pipeline.rs  redirects.rs
src/executor/builtins/: cd.rs  history_builtin.rs  jobs_builtin.rs  mod.rs
src/history/: mod.rs
src/parser/: ast.rs  grammar.rs  lexer.rs  mod.rs
src/plugin/: mod.rs
src/prompt/: mod.rs
src/repl/: completer.rs  highlighter.rs  mod.rs
src/scripting/: expand.rs  mod.rs
